			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01as: *********************************

************************* Version 8.01ar: *********************************

IMP: (11/30/04, GVG) New stipple patterns for m7/m8 in TSMC90 (Bug #22)

BUG: (11/30/04, GVG) Wrong sizeoff in X m7m8 and m8m9 contacts. Values amended (Bug #19)

IMP: (11/30/04, GVG) 3D View: printing capability from FileMenu->Print (new API in WindowContext to be more generic).

BUG: (11/30/04, SMR) Encapsulated PostScript is wrong.
FIX: Halve the number of "%" characters (they were duplicated for C formatting).

IMP: (11/30/04, SMR) "Confirm delete" in "Delete Cell" dialo, and "Make new window" in "New Cell" dialog
     are remembered between dialogs.

IMP/MAN: (11/29/04, SMR) Double-clicking on vertical axis of waveform window gives dialog for setting extents.

BUG: (11/29/04, RK) NCC wasn't stopping upon finding first error for Cell Groups with more than one comparison.

IMP: (11/29/04, GVG) 3D View: (a)Fill Window functionality available in 3D View. (b) First attempt to program
     ZoomOut/ZoomIn. (c) If cells are expanded, its nodes will be shown. (d) Bug fix in extra polyhedra connecting poly gates.

BUG: (11/29/04, RK) Fix NCC crash when designs have no Parts or no Wires and a Hash Code partitioning mismatch is reported. Re: Bugzilla bug #16

IMP: (11/29/04, SMR) Improved name incrementing so that lists are all incremented
     (for example, "A,B" used to become "A,B_1" but now becomes "A_1,B_1").

IMP: (11/28/04, SMR) Added primitive node/arc invisibility when all of their layers
     are invisible, so that they are not selectable.

IMP/MAN: (11/25/04, SMR) Added DXF input.

IMP: (11/25/04, SMR) Added "grid" button to analog waveform window.

IMP: (11/25/04, SMR) Renaming a group shows up in the explorer tree.
